@@ -16,10 +16,6 @@ pypi: clean
 	# files generated by swig
 	rm -f src/smartcard/scard/scard.py
 	rm -f src/smartcard/scard/scard_wrap.c
-	# files generated by sphinx
-	rm -rf src/smartcard/doc/_build
-	# files generated by pydoctor
-	rm -rf src/smartcard/doc/html
 	rm -rf dist
 	# Use the tox 'build' label to generate wheels for all Python versions.
 	$(TOX) run -m build
@@ -33,5 +29,12 @@ coverage:
 
 ChangeLog.git:
 	git log --stat --decorate=short > $@
+
+.PHONY: sync-docs
+sync-docs:
+	rsync \
+		--recursive --verbose --update --rsh=ssh --links \
+		build/docs/ \
+		ludov@web.sourceforge.net:/home/project-web/pyscard/htdocs/
 
 .PHONY: clean build pypi test
