@@ -12,6 +12,7 @@ envlist =
     coverage_erase
     py{3.9, 3.10, 3.11, 3.12}
     coverage_report
+    docs
 skip_missing_interpreters = True
 labels =
     build=build-py{3.9, 3.10, 3.11, 3.12}
@@ -61,3 +62,14 @@ deps =
     pylint
 commands =
     - pylint --errors-only smartcard
+
+[testenv:docs]
+skip_install = True
+recreate = True
+deps =
+    -e.
+    sphinx
+    pydoctor
+commands =
+    sphinx-build -nWEab html --keep-going src/smartcard/doc build/docs
+    pydoctor
