@@ -6,6 +6,7 @@ Unreleased changes
    * Migrate CI to use the official Coveralls action
    * Standardize local and CI testing to use tox
    * Build wheels in CI for all supported Python versions
+   * Build the docs as a part of the test suite
 
 2.1.1 (September 2024)
 ======================
